# tfx-stuff

./: Dockerfile  LICENSE  README.md  pyproject.toml  tox.ini
docs/: Makefile  conf.py  index.rst
tests/: test_cli.py  test_main.py
tfx_stuff/: cli.py  main.py
